--- a/src/components/UserProfilePage/UserProfilePage.css
+++ b/src/components/UserProfilePage/UserProfilePage.css
@@ -14,14 +14,14 @@
   padding: 20px 0;
 }
 
-.welcome-network-icon {
+.welcome-Finova-icon {
   width: 64px;  /* Match height of avatar */
   height: 64px;
   flex-shrink: 0;
 }
 
-/* Network Icon Styles */
-.network-icon {
+/* Finova Icon Styles */
+.Finova-icon {
   width: 64px;
   height: 64px;
 }
@@ -178,8 +178,8 @@
     height: 48px;
   }
   
-  .network-icon {
-    width: 24px; /* Smaller network icon on mobile */
+  .Finova-icon {
+    width: 24px; /* Smaller Finova icon on mobile */
     height: 24px;
   }
 }
